grammar.js
    program: ($) =>
      choice(
        repeat($.line_continuation),
        seq(
          repeat($.line_continuation),
          choice(
            $.item_list,
            field("item", $.item),
            withLineContinuations($, $.item_list, field("item", $.item)),
          ),
          repeat($.line_continuation),
        ),
      ),

    _continued_close_bracket: ($) =>
      continuedMember($, $._lc_before_close_bracket, "]"),

    _continued_input_redirect: ($) =>
      continuedMember($, $._lc_before_less_than, "<"),

    _continued_input_pipe: ($) =>
      continuedMember($, $._lc_before_input_pipe, "|"),

    item_list: ($) =>
      choice(
        field("leading", $.newline_opt),
        $._terminated_items,
        withLineContinuations(
          $,
          field("leading", $.newline_opt),
          $._terminated_items,
        ),
      ),

    _terminated_items: ($) =>
      choice(
        $._terminated_item,
        seq(
          $._terminated_items,
          repeat($.line_continuation),
          $._terminated_item,
        ),
      ),

    item: ($) => choice($._normal_pattern_item, $._closed_item),

    _closed_item: ($) =>
      choice($._action_item, $._pattern_action_item, $._function_item),

    _normal_pattern_item: ($) => field("pattern", $.normal_pattern),

    pattern: ($) => choice($.normal_pattern, $.special_pattern),

    special_pattern: ($) => choice($.begin_keyword, $.end_keyword),

    begin_keyword: ($) => prec(10, $._begin_word),

    _action_opening_layout: ($) =>
      seq(field("opening", "{"), optionalNewlineLayout($)),

    _action_body: ($) =>
      actionBody(
        $,
        choice($.terminated_statement_list, $.unterminated_statement_list),
      ),

    action: ($) =>
      choice(
        seq($._action_opening_layout, field("closing", "}")),
        seq($._action_opening_layout, $._action_body, field("closing", "}")),
        seq(
          $._action_opening_layout,
          actionBoundaryBody($),
          field("closing", "}"),
        ),
      ),

    terminated_statement_list: ($) => terminatedStatements($),

    _do_header: ($) => keywordHeader($, $.do_keyword),

    _self_terminating_statement: ($) =>
      choice(...controlStatements($, $.terminated_statement)),

    terminated_statement: ($) =>
      choice(
        seq($.action, statementEndLayout($)),
        $._self_terminating_statement,
        seq(field("terminator", ";"), statementEndLayout($)),
        statementTerminatedBy($, $.newline),
        statementTerminatedBy($, ";"),
      ),

    terminatable_statement: ($) =>
      choice(
        $.simple_statement,
        $.break_keyword,
        $.continue_keyword,
        $.next_keyword,
        $.nextfile_keyword,
        seq(
          $.exit_keyword,
          optional(continuedMember($, $._lc_before_expression, $.expr)),
        ),
        seq(
          $.return_keyword,
          optional(continuedMember($, $._lc_before_expression, $.expr)),
        ),
        seq(
          $._do_header,
          field("body", $.terminated_statement),
          continuedDoTail($),
        ),
      ),

    simple_statement: ($) =>
      choice(
        seq(
          $.delete_keyword,
          continuedMember($, $._lc_before_expression, field("array", $.name)),
          optional(
            seq(
              continuedMember($, $._lc_before_open_bracket, "["),
              repeat($.line_continuation),
              field("subscripts", $.expr_list),
              $._continued_close_bracket,
            ),
          ),
        ),
        $.expr,
        $.print_statement,
      ),

    print_statement: ($) =>
      prec.right(
        choice(
          field("statement", $.simple_print_statement),
          seq(
            field("statement", $.simple_print_statement),
            continuedMember(
              $,
              $._lc_before_output_redirection,
              field("redirection", $.output_redirection),
            ),
          ),
        ),
      ),

    simple_print_statement: ($) =>
      choice(
        prec.right(
          seq(
            $.print_keyword,
            optional(
              continuedMember(
                $,
                $._lc_before_expression,
                field("arguments", $.print_expr_list),
              ),
            ),
          ),
        ),
        parenthesizedPrintStatement($, $.print_keyword),
        prec.right(
          seq(
            $.printf_keyword,
            continuedMember(
              $,
              $._lc_before_expression,
              field("arguments", $.print_expr_list),
            ),
          ),
        ),
        parenthesizedPrintStatement($, $.printf_keyword),
      ),

    output_redirection: ($) =>
      seq(
        choice(seq($._output_greater_guard, choice(">", $.append)), "|"),
        continuedRequiredMember($, $.expr),
      ),

    print_keyword: ($) => prec(10, $._print_word),

    print_expr_list: ($) =>
      prec.left(
        seq($.print_expr, repeat(continuedPrintListElement($, $.print_expr))),
      ),

    expr_list: ($) => choice($.expr, $.multiple_expr_list),

    multiple_expr_list: ($) =>
      prec.left(
        seq(
          $.expr,
          continuedListElement($, $.expr),
          repeat(continuedListElement($, $.expr)),
        ),
      ),

    print_expr: ($) => choice($.unary_print_expr, $.non_unary_print_expr),

    unary_print_expr: ($) => $._print_unary_assignment_expr,

    non_unary_print_expr: ($) => $._print_non_unary_assignment_expr,

    expr: ($) => choice($.unary_expr, $.non_unary_expr),

    unary_expr: ($) => $._normal_unary_assignment_expr,

    non_unary_expr: ($) => $._normal_non_unary_assignment_expr,

    ...normalExpressionRules,

    ...printExpressionRules,

    _normal_field_expr: ($) =>
      choice(
        alias($._normal_unary_field_expr, $.unary_expr),
        alias($._normal_non_unary_field_expr, $.non_unary_expr),
      ),

    lvalue: ($) =>
      choice(
        $.name,
        prec.right(PRECEDENCE.field, subscriptedName($, $.expr_list)),
        prec(
          PRECEDENCE.field,
          seq(
            field("operator", "$"),
            continuedRequiredExpression(
              $,
              "operand",
              alias($._normal_field_expr, $.expr),
            ),
          ),
        ),
      ),

    non_unary_input_function: ($) =>
      choice(
        field("get", $.simple_get),
        prec.right(
          PRECEDENCE.field,
          seq(
            field("get", $.simple_get),
            $._continued_input_redirect,
            continuedRequiredExpression($, "source", $.expr),
          ),
        ),
        prec.right(
          PRECEDENCE.field,
          seq(
            field("source", $.non_unary_expr),
            $._continued_input_pipe,
            continuedPipeGet($),
          ),
        ),
      ),

    unary_input_function: ($) =>
      prec.right(
        PRECEDENCE.field,
        seq(
          field("source", $.unary_expr),
          $._continued_input_pipe,
          continuedPipeGet($),
        ),
      ),

    simple_get: ($) =>
      prec.right(
        PRECEDENCE.field,
        seq(
          $.getline_keyword,
          optional(
            continuedMember(
              $,
              $._lc_before_expression,
              field("target", $.lvalue),
            ),
          ),
        ),
      ),

    getline_keyword: ($) => $._getline_word,

    in_keyword: ($) => $._in_word,

    func_name: ($) => $._func_name_word,

    builtin_func_name: ($) => $._builtin_func_name_word,

    name: ($) => $._name_word,

    number: ($) =>
      choice($._number_integer, $._number_fraction, $._number_exponent),

    string: ($) =>
      seq(
        field("opening", '"'),
        repeat(choice($.string_content, $.escape_sequence)),
        field("closing", token.immediate('"')),
      ),

    string_content: () => token.immediate(prec(1, /[^"\\\n]+/)),

    or: ($) => $._or_operator,

    and: ($) => $._and_operator,

    no_match: ($) => $._no_match_operator,

    le: ($) => $._le_operator,

    incr: ($) => $._incr_operator,

    decr: ($) => $._decr_operator,

    ere: ($) =>
      seq(
        field("opening", alias($._ere_opening_slash, "/")),
        choice(
          seq(
            field("expression", $.extended_reg_exp),
            field("closing", alias($._ere_closing, "/")),
          ),
          seq(
            optional(field("expression", $.extended_reg_exp)),
            $._ere_lexical_end,
          ),
        ),
      ),

    extended_reg_exp: ($) =>
      choice(
        $.ere_branch,
        prec.left(
          1,
          seq(
            field("left", $.extended_reg_exp),
            field("operator", token.immediate("|")),
            field("right", $.ere_branch),
          ),
        ),
      ),

    ere_branch: ($) =>
      choice(
        $.ere_expression,
        prec.left(
          seq(field("left", $.ere_branch), field("right", $.ere_expression)),
        ),
      ),

    ere_expression: ($) =>
      choice(
        $.one_char_or_coll_elem_ere,
        $.left_anchor,
        $.right_anchor,
        seq(
          field("opening", token.immediate("(")),
          field("expression", $.extended_reg_exp),
          field("closing", $._ere_close_parenthesis),
        ),
        prec.left(
          2,
          seq(
            field("operand", $.ere_expression),
            field("operator", $.ere_dupl_symbol),
          ),
        ),
      ),

    one_char_or_coll_elem_ere: ($) =>
      choice(
        $.ordinary_character,
        $.quoted_character,
        $.wildcard,
        $.bracket_expression,
        alias($._ere_octal_escape_sequence, $.escape_sequence),
        alias($._ere_undefined_escape_sequence, $.escape_sequence),
      ),

    ordinary_character: ($) =>
      choice(
        $._ordinary_character,
        $._ere_ordinary_close_parenthesis,
        $._ere_ordinary_close_brace,
        $.escaped_delimiter,
        alias($._ere_named_escape_sequence, $.escape_sequence),
      ),

    _ere_named_escape_sequence: ($) =>
      ereEscapeWithCharacter($, $._ere_named_escape_character),

    _ere_octal_escape_sequence: ($) =>
      ereEscapeWithCharacter($, $._escape_octal_digits),

    _ere_undefined_escape_sequence: ($) =>
      ereEscapeWithCharacter($, $._ere_undefined_escape_character),

    _ordinary_character: () =>
      token.immediate(prec(1, /[^.\x5B\x5C*^$+?{|}()/\n]/)),

    _ere_ordinary_close_parenthesis: () => token.immediate(prec(1, ")")),

    _ere_ordinary_close_brace: () => token.immediate(prec(1, "}")),

    _ere_close_parenthesis: () => token.immediate(prec(2, ")")),

    newline_opt: ($) => rawNewlines($),

    terminator: ($) =>
      choice(
        rawNewlines($),
        seq(";", repeat(seq(repeat($.line_continuation), $.newline))),
      ),

    newline: () => "\n",

    line_continuation: () => token(seq("\\", "\n")),
