test/corpus/expression_and_input.txt
==================
lvalues and expression lists preserve their formal hierarchy
==================

BEGIN {
  scalar
  array[1]
  array[1, offset, 3]
  array[first,
        second]
  $(offset + 1)
  (first, second) in table
}

---

(program
  (item_list
    (newline_opt
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (newline_opt
          (newline))
        (terminated_statement_list
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (lvalue
                      (name))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (lvalue
                      (name)
                      (expr_list
                        (expr
                          (non_unary_expr
                            (number)))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (lvalue
                      (name)
                      (expr_list
                        (multiple_expr_list
                          (expr
                            (non_unary_expr
                              (number)))
                          (expr
                            (non_unary_expr
                              (lvalue
                                (name))))
                          (expr
                            (non_unary_expr
                              (number))))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (lvalue
                      (name)
                      (expr_list
                        (multiple_expr_list
                          (expr
                            (non_unary_expr
                              (lvalue
                                (name))))
                          (newline_opt
                            (newline))
                          (expr
                            (non_unary_expr
                              (lvalue
                                (name)))))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (lvalue
                      (expr
                        (non_unary_expr
                          (expr
                            (non_unary_expr
                              (non_unary_expr
                                (lvalue
                                  (name)))
                              (expr
                                (non_unary_expr
                                  (number))))))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (multiple_expr_list
                      (expr
                        (non_unary_expr
                          (lvalue
                            (name))))
                      (expr
                        (non_unary_expr
                          (lvalue
                            (name)))))
                    (in_keyword)
                    (name)))))
            (newline)))))
    (terminator
      (newline))))

==================
function calls distinguish logical adjacency and built-in forms
==================

BEGIN {
  f()
  f(value)
  f (value)
  call\
(value)
  length
  length()
  length (value)
  atan2(1, 2)
}

---

(program
  (item_list
    (newline_opt
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (newline_opt
          (newline))
        (terminated_statement_list
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (func_name)))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (func_name)
                    (expr_list
                      (expr
                        (non_unary_expr
                          (lvalue
                            (name)))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (non_unary_expr
                      (lvalue
                        (name)))
                    (non_unary_expr
                      (expr
                        (non_unary_expr
                          (lvalue
                            (name)))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (func_name)
                    (line_continuation)
                    (expr_list
                      (expr
                        (non_unary_expr
                          (lvalue
                            (name)))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (builtin_func_name)))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (builtin_func_name)))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (builtin_func_name)
                    (expr_list
                      (expr
                        (non_unary_expr
                          (lvalue
                            (name)))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (builtin_func_name)
                    (expr_list
                      (multiple_expr_list
                        (expr
                          (non_unary_expr
                            (number)))
                        (expr
                          (non_unary_expr
                            (number)))))))))
            (newline)))))
    (terminator
      (newline))))

==================
every POSIX built-in function name remains reserved
==================

BEGIN {
  f(atan2, close, cos, exp, fflush, gsub, index, int, length, log, match, rand, sin, split, sprintf, sqrt, srand, sub, substr, system, tolower, toupper)
}

---

(program
  (item_list
    (newline_opt
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (newline_opt
          (newline))
        (terminated_statement_list
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (func_name)
                    (expr_list
                      (multiple_expr_list
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))
                        (expr
                          (non_unary_expr
                            (builtin_func_name)))))))))
            (newline)))))
    (terminator
      (newline))))

==================
arithmetic unary concatenation and exponentiation keep their precedence
==================

BEGIN {
  a * b + c
  a + b * c / d % e
  -d ^ e + f
  g ^ h ^ i
  j - k - l
  m n + o
  !p && q
}

---

(program
  (item_list
    (newline_opt
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (newline_opt
          (newline))
        (terminated_statement_list
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (non_unary_expr
                      (non_unary_expr
                        (lvalue
                          (name)))
                      (expr
                        (non_unary_expr
                          (lvalue
                            (name)))))
                    (expr
                      (non_unary_expr
                        (lvalue
                          (name))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (non_unary_expr
                      (lvalue
                        (name)))
                    (expr
                      (non_unary_expr
                        (non_unary_expr
                          (non_unary_expr
                            (non_unary_expr
                              (lvalue
                                (name)))
                            (expr
                              (non_unary_expr
                                (lvalue
                                  (name)))))
                          (expr
                            (non_unary_expr
                              (lvalue
                                (name)))))
                        (expr
                          (non_unary_expr
                            (lvalue
                              (name))))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (unary_expr
                    (unary_expr
                      (expr
                        (non_unary_expr
                          (non_unary_expr
                            (lvalue
                              (name)))
                          (expr
                            (non_unary_expr
                              (lvalue
                                (name)))))))
                    (expr
                      (non_unary_expr
                        (lvalue
                          (name))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (non_unary_expr
                      (lvalue
                        (name)))
                    (expr
                      (non_unary_expr
                        (non_unary_expr
                          (lvalue
                            (name)))
                        (expr
                          (non_unary_expr
                            (lvalue
                              (name))))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (non_unary_expr
                      (non_unary_expr
                        (lvalue
                          (name)))
                      (expr
                        (non_unary_expr
                          (lvalue
                            (name)))))
                    (expr
                      (non_unary_expr
                        (lvalue
                          (name))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (non_unary_expr
                      (lvalue
                        (name)))
                    (non_unary_expr
                      (non_unary_expr
                        (lvalue
                          (name)))
                      (expr
                        (non_unary_expr
                          (lvalue
                            (name)))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (non_unary_expr
                      (expr
                        (non_unary_expr
                          (lvalue
                            (name)))))
                    (and)
                    (expr
                      (non_unary_expr
                        (lvalue
                          (name))))))))
            (newline)))))
    (terminator
      (newline))))

==================
membership logical conditional and assignment tiers keep their associativity
==================

BEGIN {
  p < q ~ r in array &&
    s ||
    t ? u : v
  x = y = z
  a in first in second
  a ? b : c ? d : e
}

---

(program
  (item_list
    (newline_opt
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (newline_opt
          (newline))
        (terminated_statement_list
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (non_unary_expr
                      (non_unary_expr
                        (non_unary_expr
                          (non_unary_expr
                            (non_unary_expr
                              (non_unary_expr
                                (lvalue
                                  (name)))
                              (expr
                                (non_unary_expr
                                  (lvalue
                                    (name)))))
                            (expr
                              (non_unary_expr
                                (lvalue
                                  (name)))))
                          (in_keyword)
                          (name))
                        (and)
                        (newline_opt
                          (newline))
                        (expr
                          (non_unary_expr
                            (lvalue
                              (name)))))
                      (or)
                      (newline_opt
                        (newline))
                      (expr
                        (non_unary_expr
                          (lvalue
                            (name)))))
                    (expr
                      (non_unary_expr
                        (lvalue
                          (name))))
                    (expr
                      (non_unary_expr
                        (lvalue
                          (name))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (lvalue
                      (name))
                    (expr
                      (non_unary_expr
                        (lvalue
                          (name))
                        (expr
                          (non_unary_expr
                            (lvalue
                              (name))))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (non_unary_expr
                      (non_unary_expr
                        (lvalue
                          (name)))
                      (in_keyword)
                      (name))
                    (in_keyword)
                    (name)))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (non_unary_expr
                      (lvalue
                        (name)))
                    (expr
                      (non_unary_expr
                        (lvalue
                          (name))))
                    (expr
                      (non_unary_expr
                        (non_unary_expr
                          (lvalue
                            (name)))
                        (expr
                          (non_unary_expr
                            (lvalue
                              (name))))
                        (expr
                          (non_unary_expr
                            (lvalue
                              (name))))))))))
            (newline)))))
    (terminator
      (newline))))

==================
field and update expressions obey their relative precedence
==================

BEGIN {
  ++left ^ right-- ^ -$field
  $value++
  ++$value
  other--
  --$other
}

---

(program
  (item_list
    (newline_opt
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (newline_opt
          (newline))
        (terminated_statement_list
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (non_unary_expr
                      (incr)
                      (lvalue
                        (name)))
                    (expr
                      (non_unary_expr
                        (non_unary_expr
                          (lvalue
                            (name))
                          (decr))
                        (expr
                          (unary_expr
                            (expr
                              (non_unary_expr
                                (lvalue
                                  (expr
                                    (non_unary_expr
                                      (lvalue
                                        (name)))))))))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (lvalue
                      (expr
                        (non_unary_expr
                          (lvalue
                            (name)))))
                    (incr)))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (incr)
                    (lvalue
                      (expr
                        (non_unary_expr
                          (lvalue
                            (name)))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (lvalue
                      (name))
                    (decr)))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (decr)
                    (lvalue
                      (expr
                        (non_unary_expr
                          (lvalue
                            (name)))))))))
            (newline)))))
    (terminator
      (newline))))

==================
print expressions retain their distinct hierarchy and list
==================

BEGIN {
  +a * b
  print -a ^ b + c * d e !~ /r/ in array &&
    f ||
    g ? h : i,
    j
  print (a > b), (c <= d), !e
}

---

(program
  (item_list
    (newline_opt
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (newline_opt
          (newline))
        (terminated_statement_list
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (unary_expr
                    (unary_expr
                      (expr
                        (non_unary_expr
                          (lvalue
                            (name)))))
                    (expr
                      (non_unary_expr
                        (lvalue
                          (name))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (print_statement
                  (simple_print_statement
                    (print_keyword)
                    (print_expr_list
                      (print_expr
                        (unary_print_expr
                          (unary_print_expr
                            (unary_print_expr
                              (unary_print_expr
                                (unary_print_expr
                                  (unary_print_expr
                                    (unary_print_expr
                                      (unary_print_expr
                                        (print_expr
                                          (non_unary_print_expr
                                            (non_unary_print_expr
                                              (lvalue
                                                (name)))
                                            (print_expr
                                              (non_unary_print_expr
                                                (lvalue
                                                  (name)))))))
                                      (print_expr
                                        (non_unary_print_expr
                                          (non_unary_print_expr
                                            (lvalue
                                              (name)))
                                          (print_expr
                                            (non_unary_print_expr
                                              (lvalue
                                                (name)))))))
                                    (non_unary_print_expr
                                      (lvalue
                                        (name))))
                                  (no_match)
                                  (print_expr
                                    (non_unary_print_expr
                                      (ere
                                        (extended_reg_exp
                                          (ere_branch
                                            (ere_expression
                                              (one_char_or_coll_elem_ere
                                                (ordinary_character)))))))))
                                (in_keyword)
                                (name))
                              (and)
                              (newline_opt
                                (newline))
                              (print_expr
                                (non_unary_print_expr
                                  (lvalue
                                    (name)))))
                            (or)
                            (newline_opt
                              (newline))
                            (print_expr
                              (non_unary_print_expr
                                (lvalue
                                  (name)))))
                          (print_expr
                            (non_unary_print_expr
                              (lvalue
                                (name))))
                          (print_expr
                            (non_unary_print_expr
                              (lvalue
                                (name))))))
                      (newline_opt
                        (newline))
                      (print_expr
                        (non_unary_print_expr
                          (lvalue
                            (name)))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (print_statement
                  (simple_print_statement
                    (print_keyword)
                    (print_expr_list
                      (print_expr
                        (non_unary_print_expr
                          (expr
                            (non_unary_expr
                              (non_unary_expr
                                (lvalue
                                  (name)))
                              (expr
                                (non_unary_expr
                                  (lvalue
                                    (name))))))))
                      (print_expr
                        (non_unary_print_expr
                          (expr
                            (non_unary_expr
                              (non_unary_expr
                                (lvalue
                                  (name)))
                              (le)
                              (expr
                                (non_unary_expr
                                  (lvalue
                                    (name))))))))
                      (print_expr
                        (non_unary_print_expr
                          (print_expr
                            (non_unary_print_expr
                              (lvalue
                                (name)))))))))))
            (newline)))))
    (terminator
      (newline))))

==================
unparenthesized greater-than becomes output redirection
==================

BEGIN {
  print left > right
  after
}

---

(program
  (item_list
    (newline_opt
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (newline_opt
          (newline))
        (terminated_statement_list
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (print_statement
                  (simple_print_statement
                    (print_keyword)
                    (print_expr_list
                      (print_expr
                        (non_unary_print_expr
                          (lvalue
                            (name))))))
                  (output_redirection
                    (expr
                      (non_unary_expr
                        (lvalue
                          (name))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (lvalue
                      (name))))))
            (newline)))))
    (terminator
      (newline))))

==================
getline forms preserve get target and source ownership
==================

BEGIN {
  getline
  getline value
  getline array[1] < file + suffix
  "cmd" | getline target
  -command | getline target
  $field | getline target
}

---

(program
  (item_list
    (newline_opt
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (newline_opt
          (newline))
        (terminated_statement_list
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (non_unary_input_function
                      (simple_get
                        (getline_keyword)))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (non_unary_input_function
                      (simple_get
                        (getline_keyword)
                        (lvalue
                          (name))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (non_unary_input_function
                      (simple_get
                        (getline_keyword)
                        (lvalue
                          (name)
                          (expr_list
                            (expr
                              (non_unary_expr
                                (number))))))
                      (expr
                        (non_unary_expr
                          (non_unary_expr
                            (lvalue
                              (name)))
                          (expr
                            (non_unary_expr
                              (lvalue
                                (name)))))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (non_unary_input_function
                      (non_unary_expr
                        (string
                          (string_content)))
                      (simple_get
                        (getline_keyword)
                        (lvalue
                          (name))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (unary_expr
                    (unary_input_function
                      (unary_expr
                        (expr
                          (non_unary_expr
                            (lvalue
                              (name)))))
                      (simple_get
                        (getline_keyword)
                        (lvalue
                          (name))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (non_unary_input_function
                      (non_unary_expr
                        (lvalue
                          (expr
                            (non_unary_expr
                              (lvalue
                                (name))))))
                      (simple_get
                        (getline_keyword)
                        (lvalue
                          (name))))))))
            (newline)))))
    (terminator
      (newline))))

==================
continuations before a call parenthesis and inside a list keep their owners
==================

BEGIN {
  length\
(value)
  function_name\
(value)
  print first,
    second,\
    third
}

---

(program
  (item_list
    (newline_opt
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (newline_opt
          (newline))
        (terminated_statement_list
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (builtin_func_name)
                    (line_continuation)
                    (expr_list
                      (expr
                        (non_unary_expr
                          (lvalue
                            (name)))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (func_name)
                    (line_continuation)
                    (expr_list
                      (expr
                        (non_unary_expr
                          (lvalue
                            (name)))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (print_statement
                  (simple_print_statement
                    (print_keyword)
                    (print_expr_list
                      (print_expr
                        (non_unary_print_expr
                          (lvalue
                            (name))))
                      (newline_opt
                        (newline))
                      (print_expr
                        (non_unary_print_expr
                          (lvalue
                            (name))))
                      (line_continuation)
                      (print_expr
                        (non_unary_print_expr
                          (lvalue
                            (name)))))))))
            (newline)))))
    (terminator
      (newline))))

==================
completed expressions own continuations before following syntax
==================

BEGIN {
  left\
+ right
  left\
* right
  left\
^ right
  left\
~ right
  element \
in table
  left\
|| right
  condition\
? yes : no
  target\
= value
  target\
++
  array\
[position]
  f(value\
)
  array[position\
]
  (value\
)
  print first\
, second
  getline target\
<= limit
  getline target\
< source
  left\
;
}

---
